--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,22 +3,22 @@
 }
 
 
-.App-header {
-  background-color: #222;
-  height: 150px;
+.appHeader {
+  background-color: rgb(52, 28, 160);
+  height: 100px;
   padding: 20px;
   color: white;
 }
 
-.App-title {
+/* .App-title {
   font-size: 1.5em;
 }
 
 .App-intro {
   font-size: large;
-}
+} */
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
-}
+} */
