adds display of items on DOM. also adds some styling; may have to edit when implementing material, but the base is there

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -10,6 +10,40 @@
   color: white;
 }
 
+.movieList {
+  list-style-type: none;
+  padding: 0;
+}
+
+.movieTitle {
+  margin: 3%;
+  flex-wrap: none;
+  justify-content: left;
+  text-align: left;
+}
+
+.moviePoster {
+  margin: 3%;
+}
+
+.movieItem {
+  display: inline-flex;
+  justify-content: left;
+  display: flex;
+  flex-direction: row;
+}
+
+.movieDescription {
+  display: block;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  text-align: left;
+}
+
+.movieTextDiv {
+  margin-top: 4%;
+}
+
 /* .App-title {
   font-size: 1.5em;
 }
