--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,11 +1,12 @@
 .App {
   text-align: center;
+  background-color: #8e99f3;
 }
 
 
 .appHeader {
-  background-color: rgb(52, 28, 160);
-  height: 100px;
+  background-color: #e53935;
+  height: auto;
   padding: 20px;
   color: white;
 }
@@ -24,9 +25,10 @@
 }
 
 .movieItem {
-  border: black 1px solid;
+  border: #5c6bc0 1px solid;
   border-radius: 2%;
   width: 350px;
+  padding-top: 3%;
 }
 
 
@@ -39,4 +41,15 @@
   display: flex;
   justify-content: center;
   margin-top: 3%;
+  /* margin-bottom: 15%;
+  background-color: #8e99f3; */
+}
+
+.buttons {
+  margin: 2%;
+}
+
+.headerImage {
+  height: auto;
+  width: 300px;
 }
